# tabular-trees

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  Pipfile  README.md  bandit.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: coverage.yml  pre-commit.yml  publish-package.yml  python-app.yml  tox.yml  version.yml
demo/: Model-Parser_XGBoost.ipynb  Monotonic Trend Validation.ipynb  Shapley Values.ipynb  XGBoost Monotonic Trend Validation.ipynb  XGBoost Shapley Values.ipynb
docs/: README.md  requirements.txt
docs/source/: api.rst  conf.py  index.rst  quick-start.rst
examples/: Model-Parser_XGBoost.ipynb  Model-Parser_XGBoost_Internal-Steps.ipynb  XGBoost Model Parser.ipynb  XGBoost Monotonic Trend Validation.ipynb  XGBoost Shapley Values.ipynb
pygbmexpl/: __init__.py  helpers.py  trees.py
pygbmexpl/xgb/: __init__.py  explainer.py  parser.py  predictions.py  validate.py
src/tabular_trees/: __init__.py  _version.py  checks.py  explain.py  helpers.py  lightgbm.py  sklearn.py  trees.py  validate.py  xgboost.py
src/tabular_trees/explain/: prediction_decomposition.py  shapley_values.py
src/tabular_trees/lightgbm/: __init__.py  booster_string.py  booster_string_converter.py  editable_booster.py  helpers.py  lightgbm_tabular_trees.py  trees.py
src/tabular_trees/sklearn/: __init__.py  scikit_learn_hist_tabular_trees.py  scikit_learn_tabular_trees.py  sklearn_hist_tabular_trees.py  sklearn_tabular_trees.py  trees.py
src/tabular_trees/xgb/: __init__.py  parser.py  validate.py
src/tabular_trees/xgboost/: __init__.py  dump_parser.py  dump_reader.py  explainer.py  parser.py  trees.py  validate.py  xgboost_tabular_trees.py
tests/: conftest.py  lightgbm_fixtures.py  test_BaseModelTabularTrees.py  test_TabularTrees.py  test_calculate_shapley_values.py  test_export_tree_data.py  xgboost_fixtures.py
tests/component/explain/: test_calculate_shapley_values_treeshap_equality.py
tests/component/lightgbm/: test_booster_reproducibility.py
tests/component/validate/: test_test_validate_monotonic_constraints.py
tests/component/xgboost/: test_parsers_equal_to_trees_to_dataframe.py  test_parsers_give_same_output.py  test_readers_give_same_output.py  test_xgboost_tabular_trees_derive_predictions.py
tests/lightgbm/: conftest.py  test_EditableBooster.py  test_LightGBMTabularTrees.py  test_export_tree_data.py  test_lgb_trees.py
tests/sklearn/: conftest.py  test_ScikitLearnHistTabularTrees.py  test_ScikitLearnTabularTrees.py  test__extract_gbm_tree_data.py  test__extract_hist_gbm_tree_data.py  test_export_tree_data.py  test_export_tree_data__gradient_boosting_model.py  test_export_tree_data__hist_gradient_boosting_model.py
tests/unit/: __init__.py
tests/unit/explain/: test_decompose_prediction.py
tests/unit/explain/prediction_decomposition/: test_decompose_prediction.py
tests/unit/explain/shapley_values/: test_calculate_shapley_values.py
tests/unit/lightgbm/editable_booster/: test_EditableBooster.py
tests/unit/lightgbm/lightgbm_tabular_trees/: test_LightGBMTabularTrees.py  test_export_tree_data.py
tests/unit/sklearn/: conftest.py  test_ScikitLearnHistTabularTrees.py  test_ScikitLearnTabularTrees.py  test__extract_gbm_tree_data.py  test_export_tree_data.py  test_export_tree_data__gradient_boosting_model.py  test_export_tree_data__hist_gradient_boosting_model.py
tests/unit/trees/: test_BaseModelTabularTrees.py  test_TabularTrees.py  test_export_tree_data.py
tests/unit/validate/: conftest.py  test_MonotonicConstraintResults.py  test_validate_monotonic_constraints.py
tests/unit/xgboost/: conftest.py
tests/unit/xgboost/dump_parser/: test_XGBoostParser.py
tests/unit/xgboost/dump_reader/: test_DumpReader.py  test_JsonDumpReader.py  test_TextDumpReader.py
tests/unit/xgboost/xgboost_tabular_trees/: test_ParsedXGBoostTabularTrees.py  test_XGBoostTabularTrees.py  test_export_tree_data.py
tests/xgb/: build_model.py  test_eli5_equality.py  test_parser.py  test_shap_equality.py  test_shapley_values.py
tests/xgboost/: _build_model.py  _test_eli5_equality.py  _test_shap_equality.py  _test_shapley_values.py  conftest.py  test_calculate_shapley_values.py  test_decompose_prediction.py  test_export_tree_data.py  test_parser.py  test_shap_equality.py  test_shapley_values.py  test_trees.py  test_treeshap_equality.py  test_validate.py
ttrees/: helpers.py  trees.py
ttrees/xgb/: explainer.py  parser.py
