[tool.poetry]
name = "tabular-trees"
version = "0.2.0.dev6"
description = "Python package for holding tree based models in tabular format"
authors = ["Richard Angell <richardangell37@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [{include = "tabular_trees", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "4.46.1"
pandas = ">1.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.1.0"
pytest = "7.2.1"
pytest-mock = "3.10.0"
pytest-cov = "4.0.0"
tox = "4.4.6"
eli5 = "0.13.0"
scikit-learn = "^1.0.1"
ipykernel = "^6.21.2"


[tool.poetry.group.xgboost]
optional = true

[tool.poetry.group.xgboost.dependencies]
xgboost = "^1.4.0"


[tool.poetry.group.lightgbm]
optional = true

[tool.poetry.group.lightgbm.dependencies]
lightgbm = "^3.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "6.1.3"
sphinx-rtd-theme = "1.2.0"
numpydoc = "1.5.0"


[tool.poetry.group.sklearn]
optional = true

[tool.poetry.group.sklearn.dependencies]
scikit-learn = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
