[tool.poetry]
name = "tabular-trees"
version = "0.3.0"
description = "Package to assist with analysis of tree-based models."
authors = ["Richard Angell <richardangell37@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "tabular_trees", from = "src"}]
homepage = "https://github.com/richardangell/tabular-trees"
repository = "https://github.com/richardangell/tabular-trees"
documentation = "https://tabular-trees.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "4.46.1"
pandas = "^1.0.0"
scikit-learn = {version = "^1.0.1", optional = true}
lightgbm = {version = "^3.0.0", optional = true}
xgboost = {version = "^1.4.0", optional = true}

[tool.poetry.extras]
sklearn = ["scikit-learn"]
lightgbm = ["lightgbm"]
xgboost = ["xgboost"]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "3.1.0"
pytest = "7.2.1"
pytest-mock = "3.10.0"
pytest-cov = "4.0.0"
tox = "4.4.6"
eli5 = "0.13.0"
scikit-learn = "^1.0.1"
ipykernel = "^6.21.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "6.1.3"
sphinx-rtd-theme = "1.2.0"
numpydoc = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
